--- a/quickstart-automate/cloudbuild.yaml
+++ b/quickstart-automate/cloudbuild.yaml
@@ -15,5 +15,7 @@
 # [START cloudbuild_quickstart_automate]
 steps:
   - name: golang
-    args: ['go', 'run', 'quickstart-automate/main.go']
+    args: ["go", "run", "quickstart-automate/main.go"]
 # [END cloudbuild_quickstart_automate]
+options:
+  logging: CLOUD_LOGGING_ONLY
